--- a/.github/workflows/phpcs.yml
+++ b/.github/workflows/phpcs.yml
@@ -1,30 +1,37 @@
-name: WPCS PHP 7.4
+name: WordPress Coding Standard Test
 
-on: [push]
-
-env:
-  PHP_VERSION: 7.4
+on:
+  push:
+    branches: [ develop ]
 
 jobs:
-  wpcs:
+  build:
     runs-on: ubuntu-latest
-    strategy:
-      matrix:
-        php-version: [$PHP_VERSION]
-    name: PHP WPCS Check
+    
     steps:
-    - name: Checkout code
-      uses: actions/checkout@v3
-      
-    - name: Setup PHP
-      uses: shivammathur/setup-php@v2
-      with:
-        php-version: '7.4'
-
-    - name: Install dependencies
+    - name: Checkout Code
+      uses: actions/checkout@v2
+    
+    - name: Install PHP and dependencies
       run: |
-        composer install
-        
-    - name: Run WPCS checks
+        sudo apt-get update
+        sudo apt-get install -y php7.4-cli php-xml php-mbstring
+        sudo apt-get install -y wp-cli
+    
+    - name: Install PHP Code Sniffer
       run: |
-        ./vendor/bin/phpcs . --standard=WordPress
+        wget https://github.com/squizlabs/PHP_CodeSniffer/releases/download/3.6.1/phpcs.phar
+        chmod +x phpcs.phar
+        sudo mv phpcs.phar /usr/local/bin/phpcs
+    
+    - name: Install WordPress Coding Standards
+      run: |
+        wget https://github.com/WordPress/WordPress-Coding-Standards/archive/master.zip
+        unzip master.zip
+        rm master.zip
+        mv WordPress-Coding-Standards-master ~/WordPress-Coding-Standards
+        phpcs --config-set installed_paths ~/WordPress-Coding-Standards
+    
+    - name: Test WordPress Coding Standards
+      run: |
+        phpcs --standard=WordPress --extensions=php .
