--- a/.github/workflows/wpcs.yml
+++ b/.github/workflows/wpcs.yml
@@ -1,8 +1,10 @@
-name: WordPress Coding Standard Test
+name: WPCS Test
 
 on:
   push:
-    branches: [ develop ]
+    branches:
+      - develop
+      - master
 
 jobs:
   build:
