--- a/.github/workflows/wpcs.yml
+++ b/.github/workflows/wpcs.yml
@@ -1,10 +1,8 @@
-name: WPCS Test
+name: WordPress Coding Standard Test
 
 on:
   push:
-    branches:
-      - develop
-      - master
+    branches: [ master ]
 
 jobs:
   build:
@@ -12,17 +10,17 @@ jobs:
     
     steps:
     - name: Checkout Code
-      uses: actions/checkout@v3
+      uses: actions/checkout@v2
     
     - name: Install PHP and dependencies
       run: |
         sudo apt-get update
-        sudo apt-get install -y php7.3-cli php-xml php-mbstring
+        sudo apt-get install -y php7.4 php7.4-xml php7.4-mbstring
         sudo apt-get install -y wp-cli
     
     - name: Install PHP Code Sniffer
       run: |
-        wget https://github.com/squizlabs/PHP_CodeSniffer/releases/download/3.7.1/phpcs.phar
+        wget https://github.com/squizlabs/PHP_CodeSniffer/releases/download/3.6.1/phpcs.phar
         chmod +x phpcs.phar
         sudo mv phpcs.phar /usr/local/bin/phpcs
     
