--- a/.github/workflows/wpcs.yml
+++ b/.github/workflows/wpcs.yml
@@ -14,13 +14,11 @@ jobs:
     
     - name: Install PHP and dependencies
       run: |
-        sudo apt-get update
-        sudo apt-get install -y php7.4
-        sudo apt-get install -y wp-cli
+        php -v
     
     - name: Install PHP Code Sniffer
       run: |
-        wget https://github.com/squizlabs/PHP_CodeSniffer/releases/download/3.6.1/phpcs.phar
+        wget https://github.com/squizlabs/PHP_CodeSniffer/releases/download/3.7.1/phpcs.phar
         chmod +x phpcs.phar
         sudo mv phpcs.phar /usr/local/bin/phpcs
     
