--- a/.github/workflows/wpcs.yml
+++ b/.github/workflows/wpcs.yml
@@ -1,35 +1,41 @@
-name: WordPress Coding Standard Test
+name: Test WordPress Coding Standard
 
 on:
   push:
-    branches: [ master ]
+    branches: [ master, develop ]
 
 jobs:
-  build:
+  test-wpcs:
     runs-on: ubuntu-latest
     
     steps:
+    - run: |
+        echo 'PHP 8.1 is built-in on Ubuntu 22.04, skipping PHP installation.'
+        
     - name: Checkout Code
       uses: actions/checkout@v2
-    
-    - name: Install PHP and dependencies
-      run: |
-        php -v
     
     - name: Install PHP Code Sniffer
       run: |
         wget https://github.com/squizlabs/PHP_CodeSniffer/releases/download/3.7.1/phpcs.phar
         chmod +x phpcs.phar
         sudo mv phpcs.phar /usr/local/bin/phpcs
-    
+        
     - name: Install WordPress Coding Standards
       run: |
         wget https://github.com/WordPress/WordPress-Coding-Standards/archive/master.zip
         unzip master.zip
         rm master.zip
         mv WordPress-Coding-Standards-master ~/WordPress-Coding-Standards
-        phpcs --config-set installed_paths ~/WordPress-Coding-Standards
-    
-    - name: Test WordPress Coding Standards
+        
+    - name: Install PHPCompatiblity
       run: |
-        phpcs --standard=WordPress --extensions=php .
+        wget https://github.com/PHPCompatibility/PHPCompatibility/archive/develop.zip
+        unzip develop.zip
+        rm develop.zip
+        mv PHPCompatibility ~/PHPCompatibility
+        phpcs --config-set installed_paths ~/WordPress-Coding-Standards,~/PHPCompatibility
+    
+    - name: Run PHPCS
+      run: |
+        phpcs --standard=WordPress,PHPCompatibility --extensions=php .
