--- a/.github/workflows/wpcs.yml
+++ b/.github/workflows/wpcs.yml
@@ -33,7 +33,7 @@ jobs:
         wget https://github.com/PHPCompatibility/PHPCompatibility/archive/develop.zip
         unzip develop.zip
         rm develop.zip
-        mv PHPCompatibility ~/PHPCompatibility
+        mv PHPCompatibility-develop ~/PHPCompatibility
         phpcs --config-set installed_paths ~/WordPress-Coding-Standards,~/PHPCompatibility
     
     - name: Run PHPCS
