--- a/.github/workflows/wpcs.yml
+++ b/.github/workflows/wpcs.yml
@@ -36,4 +36,4 @@ jobs:
     
     - name: Run PHPCS
       run: |
-        phpcs --standard=WordPress,PHPCompatibility --extensions=php .
+        phpcs --standard=WordPress --extensions=php .
