--- a/.github/workflows/wpcs.yml
+++ b/.github/workflows/wpcs.yml
@@ -32,8 +32,9 @@ jobs:
         wget https://github.com/PHPCompatibility/PHPCompatibility/archive/develop.zip
         unzip develop.zip
         mv PHPCompatibility-develop ~/PHPCompatibility
-        PHPCS_PATH=pwd
-        phpcs --config-set installed_paths $PHPCS_PATH/wpcs,$PHPCS_PATH/PHPCompatibility
+        phpcs --config-set installed_paths /home/$USER/wpcs,/home/$USER/PHPCompatibility
+        echo 'PHPCS supported standards are..'
+        phpcs -i
         
     - name: Loading PHPCS Configuration
       run: |
