--- a/.github/workflows/wpcs.yml
+++ b/.github/workflows/wpcs.yml
@@ -6,41 +6,35 @@ on:
 
 jobs:
   test-wpcs:
-    runs-on: ubuntu-20.04
+    runs-on: ubuntu-latest
     
     steps:
-    - run: |
-        echo 'PHP 7.4 is built-in on Ubuntu 20.04, skipping PHP installation.'
-        
     - name: Checkout Code
       uses: actions/checkout@v2
     
-    - name: Install PHP Code Sniffer
+    - name: Install Dependencies
       run: |
+        # Installing PHP_CodeSniffers
         wget https://github.com/squizlabs/PHP_CodeSniffer/releases/download/3.6.1/phpcs.phar
         chmod +x phpcs.phar
-        sudo mv phpcs.phar /usr/local/bin/phpcs
-        
-    - name: Install WordPress Coding Standards
-      run: |
+        sudo mv phpcs.phar /usr/local/bin/phpc
+        # Installing WPCS
         wget https://github.com/WordPress/WordPress-Coding-Standards/archive/master.zip
         unzip master.zip
         mv WordPress-Coding-Standards-master ~/wpcs
-        
-    - name: Install PHPCompatiblity
-      run: |
+        # Installing PHPCompatibility
         wget https://github.com/PHPCompatibility/PHPCompatibility/archive/develop.zip
         unzip develop.zip
         mv PHPCompatibility-develop ~/PHPCompatibility
+        # Setting up paths
         phpcs --config-set installed_paths /home/$USER/wpcs,/home/$USER/PHPCompatibility
-        echo 'PHPCS supported standards are..'
         phpcs -i
         
-    - name: Loading PHPCS Configuration
+    - name: Configure Standards
       run: |
         rm phpcs.xml
         wget -O phpcs.xml https://raw.githubusercontent.com/imjafran/wpcs/master/phpcs.xml
     
-    - name: Run PHPCS
+    - name: Run Tests
       run: |
         phpcs .
