--- a/.github/workflows/wpcs.yml
+++ b/.github/workflows/wpcs.yml
@@ -17,7 +17,7 @@ jobs:
         # Installing PHP_CodeSniffers
         wget https://github.com/squizlabs/PHP_CodeSniffer/releases/download/3.6.1/phpcs.phar
         chmod +x phpcs.phar
-        sudo mv phpcs.phar /usr/local/bin/phpc
+        sudo mv phpcs.phar /usr/local/bin/phpcs
         # Installing WPCS
         wget https://github.com/WordPress/WordPress-Coding-Standards/archive/master.zip
         unzip master.zip
