--- a/.github/workflows/wpcs.yml
+++ b/.github/workflows/wpcs.yml
@@ -18,14 +18,16 @@ jobs:
         wget https://github.com/squizlabs/PHP_CodeSniffer/releases/download/3.7.1/phpcs.phar
         chmod +x phpcs.phar
         sudo mv phpcs.phar /usr/local/bin/phpcs
+        
         # Installing WPCS
         wget https://github.com/WordPress/WordPress-Coding-Standards/archive/master.zip
         unzip master.zip
         mv WordPress-Coding-Standards-master ~/wpcs
+        
         # Installing PHPCompatibility
-        wget https://github.com/PHPCompatibility/PHPCompatibility/archive/develop.zip
-        unzip develop.zip
-        mv PHPCompatibility-develop ~/PHPCompatibility
+        composer require phpcompatibility/php-compatibility
+        mv vendor/phpcompatibility/php-compatibility ~/PHPCompatibility
+        
         # Setting up paths
         phpcs --config-set installed_paths /home/$USER/wpcs,/home/$USER/PHPCompatibility
         phpcs -i
