--- a/.github/workflows/wpcs2.yml
+++ b/.github/workflows/wpcs2.yml
@@ -9,8 +9,9 @@ jobs:
         runs-on: ubuntu-20.04
 
         steps:
-            - name: Checkout Code
-              uses: actions/checkout@v2
-
-            - name: Run tests
+            - uses: actions/checkout@v3
+            - id: foo
               uses: imjafran/wpcs@v1
+              with:
+                php: '7.4'
+                text-domain: 'scf'
